<resources>
    <string name="app_name">MaterialTest</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="title_activity_sub">SubActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_tab">Activity Using Tab Library</string>
    <string name="action_tabs_using_library">SlidingTabLayoutExample</string>
    <string-array name="tabs">
        <item>TAB 1</item>
        <item>TAB 2</item>
        <item>TAB 3</item>
        <item>TAB 4</item>
        <item>TAB 5</item>
        <item>TAB 6</item>
    </string-array>
    <string-array name="drawers_tabs">
        <item>Search</item>
        <item>Hits</item>
        <item>Upcoming</item>
    </string-array>
    <string name="title_activity_vector_test">VectorTestActivity</string>
    <string name="action_vector_test_activity">Vector Test Activity</string>
    <string name="action_activity_with_sliding_tab_layout">Activity with sliding tab layout</string>
    <string name="error_timeout">Oops! Your Connection Timed Out</string>
    <string name="error_auth_failure">Oops! RottenTomatoes Says It Doesn\'t Recognize You</string>
    <string name="error_network">Oops! RottenTomatoes Server Just Messed Up</string>
    <string name="error_parser">Oops! Data Received Was An Unreadable Mess</string>
    <string name="title_activity_activity_recycler_item_animations">ActivityRecyclerItemAnimations
    </string>
    <string name="add_item">Add Item</string>
    <string name="action_activity_recycler_item_animator">Recycler Item Animations</string>
    <string name="title_activity_">ActivityA</string>
    <string name="title_activity_activity_b">ActivityB</string>
    <string name="action_activity_a">Activity A</string>
    <string name="title_activity_activity_shared">ActivitySharedA</string>
    <string name="title_activity_activity_shared_b">ActivitySharedB</string>
    <string name="action_activity_shared_a">Activity Shared A</string>
    <string name="button_plus">+</string>
    <string name="my_view">My View</string>
    <string name="txt_movie_dummy">Hitman Agent 47</string>
    <string name="txt_date_dummy">31–31–31</string>
    <string name="txt_item">Item</string>
    <string name="txt_vivz">Vivz</string>
    <string name="email_vivz">slidenerd@gmail.com</string>
    <string name="txt_number_page">The Page Number is 1</string>
</resources>
