<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryText"
    android:orientation="horizontal">

    <com.pkmmte.view.CircularImageView
        android:id="@+id/image_profile"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_centerVertical="true"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_abstract"
        app:border="true"
        app:border_color="@android:color/white"
        app:border_width="4dp"
        app:shadow="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/image_profile"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/hello_world"
            android:textColor="@android:color/white" />

        <TextView
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/txt_vivz"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/accentColor" />

        <TextView
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/email_vivz"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>